src/test/ui/on-unimplemented/no-debug.stderr
error[E0277]: `Foo` doesn't implement `std::fmt::Debug`
  --> $DIR/no-debug.rs:20:27
   |
20 |     println!("{:?} {:?}", Foo, Bar);
   |                           ^^^ `Foo` cannot be formatted using `:?`; add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `Foo`
   = note: required by `std::fmt::Debug::fmt`

error[E0277]: `no_debug::Bar` doesn't implement `std::fmt::Debug`
  --> $DIR/no-debug.rs:20:32
   |
20 |     println!("{:?} {:?}", Foo, Bar);
   |                                ^^^ `no_debug::Bar` cannot be formatted using `:?` because it doesn't implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `no_debug::Bar`
   = note: required by `std::fmt::Debug::fmt`

error[E0277]: `Foo` doesn't implement `std::fmt::Display`
  --> $DIR/no-debug.rs:21:23
   |
21 |     println!("{} {}", Foo, Bar);
   |                       ^^^ `Foo` cannot be formatted with the default formatter; try using `:?` instead if you are using a format string
   |
   = help: the trait `std::fmt::Display` is not implemented for `Foo`
   = note: required by `std::fmt::Display::fmt`

error[E0277]: `no_debug::Bar` doesn't implement `std::fmt::Display`
  --> $DIR/no-debug.rs:21:28
   |
21 |     println!("{} {}", Foo, Bar);
   |                            ^^^ `no_debug::Bar` cannot be formatted with the default formatter; try using `:?` instead if you are using a format string
   |
   = help: the trait `std::fmt::Display` is not implemented for `no_debug::Bar`
   = note: required by `std::fmt::Display::fmt`

error: aborting due to 4 previous errors

